--- a/draft/package/draft4.ipynb
+++ b/draft/package/draft4.ipynb
@@ -13,13 +13,118 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "setup_nonlinearity_term (generic function with 3 methods)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[91m\u001b[1mERROR: \u001b[22m\u001b[39mLoadError: ArgumentError: Package StatsBase [2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91] is required but does not seem to be installed:\n",
+      " - Run `Pkg.instantiate()` to install all recorded dependencies.\n",
+      "\n",
+      "Stacktrace:\n",
+      "  [1] \u001b[0m\u001b[1m_require\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mpkg\u001b[39m::\u001b[0mBase.PkgId, \u001b[90menv\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m.\\\u001b[39m\u001b[90m\u001b[4mloading.jl:1926\u001b[24m\u001b[39m\n",
+      "  [2] \u001b[0m\u001b[1m__require_prelocked\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90muuidkey\u001b[39m::\u001b[0mBase.PkgId, \u001b[90menv\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m.\\\u001b[39m\u001b[90m\u001b[4mloading.jl:1812\u001b[24m\u001b[39m\n",
+      "  [3] \u001b[0m\u001b[1m#invoke_in_world#3\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m.\\\u001b[39m\u001b[90m\u001b[4messentials.jl:926\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      "  [4] \u001b[0m\u001b[1minvoke_in_world\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m.\\\u001b[39m\u001b[90m\u001b[4messentials.jl:923\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      "  [5] \u001b[0m\u001b[1m_require_prelocked\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90muuidkey\u001b[39m::\u001b[0mBase.PkgId, \u001b[90menv\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m.\\\u001b[39m\u001b[90m\u001b[4mloading.jl:1803\u001b[24m\u001b[39m\n",
+      "  [6] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m.\\\u001b[39m\u001b[90m\u001b[4mloading.jl:1790\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      "  [7] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m.\\\u001b[39m\u001b[90m\u001b[4mlock.jl:267\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      "  [8] \u001b[0m\u001b[1m__require\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90minto\u001b[39m::\u001b[0mModule, \u001b[90mmod\u001b[39m::\u001b[0mSymbol\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m.\\\u001b[39m\u001b[90m\u001b[4mloading.jl:1753\u001b[24m\u001b[39m\n",
+      "  [9] \u001b[0m\u001b[1m#invoke_in_world#3\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m.\\\u001b[39m\u001b[90m\u001b[4messentials.jl:926\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      " [10] \u001b[0m\u001b[1minvoke_in_world\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m.\\\u001b[39m\u001b[90m\u001b[4messentials.jl:923\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      " [11] \u001b[0m\u001b[1mrequire\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90minto\u001b[39m::\u001b[0mModule, \u001b[90mmod\u001b[39m::\u001b[0mSymbol\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m.\\\u001b[39m\u001b[90m\u001b[4mloading.jl:1746\u001b[24m\u001b[39m\n",
+      " [12] \u001b[0m\u001b[1minclude\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m.\\\u001b[39m\u001b[90m\u001b[4mBase.jl:495\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      " [13] \u001b[0m\u001b[1minclude_package_for_output\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mpkg\u001b[39m::\u001b[0mBase.PkgId, \u001b[90minput\u001b[39m::\u001b[0mString, \u001b[90mdepot_path\u001b[39m::\u001b[0mVector\u001b[90m{String}\u001b[39m, \u001b[90mdl_load_path\u001b[39m::\u001b[0mVector\u001b[90m{String}\u001b[39m, \u001b[90mload_path\u001b[39m::\u001b[0mVector\u001b[90m{String}\u001b[39m, \u001b[90mconcrete_deps\u001b[39m::\u001b[0mVector\u001b[90m{Pair{Base.PkgId, UInt128}}\u001b[39m, \u001b[90msource\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m.\\\u001b[39m\u001b[90m\u001b[4mloading.jl:2222\u001b[24m\u001b[39m\n",
+      " [14] top-level scope\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m\u001b[4mstdin:3\u001b[24m\u001b[39m\n",
+      "in expression starting at C:\\Users\\brian\\.julia\\packages\\Plots\\HyyIK\\src\\Plots.jl:1\n",
+      "in expression starting at stdin:3\n"
+     ]
+    },
+    {
+     "ename": "ErrorException",
+     "evalue": "Failed to precompile Plots [91a5bcdd-55d7-5caf-9e0b-520d859cae80] to \"C:\\\\Users\\\\brian\\\\.julia\\\\compiled\\\\v1.10\\\\Plots\\\\jl_214E.tmp\".",
+     "output_type": "error",
+     "traceback": [
+      "Failed to precompile Plots [91a5bcdd-55d7-5caf-9e0b-520d859cae80] to \"C:\\\\Users\\\\brian\\\\.julia\\\\compiled\\\\v1.10\\\\Plots\\\\jl_214E.tmp\".\n",
+      "\n",
+      "Stacktrace:\n",
+      "  [1] error(s::String)\n",
+      "    @ Base .\\error.jl:35\n",
+      "  [2] compilecache(pkg::Base.PkgId, path::String, internal_stderr::IO, internal_stdout::IO, keep_loaded_modules::Bool)\n",
+      "    @ Base .\\loading.jl:2468\n",
+      "  [3] compilecache\n",
+      "    @ .\\loading.jl:2340 [inlined]\n",
+      "  [4] (::Base.var\"#968#969\"{Base.PkgId})()\n",
+      "    @ Base .\\loading.jl:1974\n",
+      "  [5] mkpidlock(f::Base.var\"#968#969\"{Base.PkgId}, at::String, pid::Int32; kwopts::@Kwargs{stale_age::Int64, wait::Bool})\n",
+      "    @ FileWatching.Pidfile C:\\Users\\brian\\.julia\\juliaup\\julia-1.10.4+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.10\\FileWatching\\src\\pidfile.jl:93\n",
+      "  [6] #mkpidlock#6\n",
+      "    @ C:\\Users\\brian\\.julia\\juliaup\\julia-1.10.4+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.10\\FileWatching\\src\\pidfile.jl:88 [inlined]\n",
+      "  [7] trymkpidlock(::Function, ::Vararg{Any}; kwargs::@Kwargs{stale_age::Int64})\n",
+      "    @ FileWatching.Pidfile C:\\Users\\brian\\.julia\\juliaup\\julia-1.10.4+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.10\\FileWatching\\src\\pidfile.jl:111\n",
+      "  [8] #invokelatest#2\n",
+      "    @ .\\essentials.jl:894 [inlined]\n",
+      "  [9] invokelatest\n",
+      "    @ .\\essentials.jl:889 [inlined]\n",
+      " [10] maybe_cachefile_lock(f::Base.var\"#968#969\"{Base.PkgId}, pkg::Base.PkgId, srcpath::String; stale_age::Int64)\n",
+      "    @ Base .\\loading.jl:2983\n",
+      " [11] maybe_cachefile_lock\n",
+      "    @ .\\loading.jl:2980 [inlined]\n",
+      " [12] _require(pkg::Base.PkgId, env::String)\n",
+      "    @ Base .\\loading.jl:1970\n",
+      " [13] __require_prelocked(uuidkey::Base.PkgId, env::String)\n",
+      "    @ Base .\\loading.jl:1812\n",
+      " [14] #invoke_in_world#3\n",
+      "    @ .\\essentials.jl:926 [inlined]\n",
+      " [15] invoke_in_world\n",
+      "    @ .\\essentials.jl:923 [inlined]\n",
+      " [16] _require_prelocked(uuidkey::Base.PkgId, env::String)\n",
+      "    @ Base .\\loading.jl:1803\n",
+      " [17] macro expansion\n",
+      "    @ .\\loading.jl:1790 [inlined]\n",
+      " [18] macro expansion\n",
+      "    @ .\\lock.jl:267 [inlined]\n",
+      " [19] __require(into::Module, mod::Symbol)\n",
+      "    @ Base .\\loading.jl:1753\n",
+      " [20] #invoke_in_world#3\n",
+      "    @ .\\essentials.jl:926 [inlined]\n",
+      " [21] invoke_in_world\n",
+      "    @ .\\essentials.jl:923 [inlined]\n",
+      " [22] require(into::Module, mod::Symbol)\n",
+      "    @ Base .\\loading.jl:1746\n",
+      " [23] eval\n",
+      "    @ .\\boot.jl:385 [inlined]\n",
+      " [24] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)\n",
+      "    @ Base .\\loading.jl:2076\n",
+      " [25] #invokelatest#2\n",
+      "    @ .\\essentials.jl:892 [inlined]\n",
+      " [26] invokelatest\n",
+      "    @ .\\essentials.jl:889 [inlined]\n",
+      " [27] (::VSCodeServer.var\"#217#218\"{VSCodeServer.NotebookRunCellArguments, String})()\n",
+      "    @ VSCodeServer c:\\Users\\brian\\.vscode\\extensions\\julialang.language-julia-1.105.2\\scripts\\packages\\VSCodeServer\\src\\serve_notebook.jl:24\n",
+      " [28] withpath(f::VSCodeServer.var\"#217#218\"{VSCodeServer.NotebookRunCellArguments, String}, path::String)\n",
+      "    @ VSCodeServer c:\\Users\\brian\\.vscode\\extensions\\julialang.language-julia-1.105.2\\scripts\\packages\\VSCodeServer\\src\\repl.jl:276\n",
+      " [29] notebook_runcell_request(conn::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, params::VSCodeServer.NotebookRunCellArguments)\n",
+      "    @ VSCodeServer c:\\Users\\brian\\.vscode\\extensions\\julialang.language-julia-1.105.2\\scripts\\packages\\VSCodeServer\\src\\serve_notebook.jl:13\n",
+      " [30] dispatch_msg(x::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, dispatcher::VSCodeServer.JSONRPC.MsgDispatcher, msg::Dict{String, Any})\n",
+      "    @ VSCodeServer.JSONRPC c:\\Users\\brian\\.vscode\\extensions\\julialang.language-julia-1.105.2\\scripts\\packages\\JSONRPC\\src\\typed.jl:67\n",
+      " [31] serve_notebook(pipename::String, debugger_pipename::String, outputchannel_logger::Base.CoreLogging.SimpleLogger; error_handler::var\"#5#10\"{String})\n",
+      "    @ VSCodeServer c:\\Users\\brian\\.vscode\\extensions\\julialang.language-julia-1.105.2\\scripts\\packages\\VSCodeServer\\src\\serve_notebook.jl:147\n",
+      " [32] top-level scope\n",
+      "    @ c:\\Users\\brian\\.vscode\\extensions\\julialang.language-julia-1.105.2\\scripts\\notebook\\notebook.jl:35"
+     ]
     }
    ],
    "source": [
@@ -71,6 +176,13 @@
     "\n",
     "u0 = n*sqrt(P)*sech.(t ./ τ);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
